--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -5,17 +5,17 @@ name = "my_theme"
 light = true
 
 # Primary
-primary = "#1565c0"
+primary = "#35383e"
 
 # Menu
-menu_primary = "#fff"
-menu_text = "#34495e"
-menu_text_active = "#2962ff"
-menu_title = "#2b2b2b"
+menu_primary = "rgb(250,250,250)"
+menu_text = "#35383e"
+menu_text_active = "#127eee"
+menu_title = "#35383e"
 
 # Home sections
-home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(247, 247, 247)"
+home_section_odd = "rgb(250,250,250)"
+home_section_even = "rgb(250,250,250)"
 
 [dark]
   link = "#bbdefb"
