--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,23 +20,23 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: tgiuliodonati.polen@gmail.com
+phone: +39 338 7702999
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
-  country: United States
-  country_code: US
-coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
-office_hours:
-  - 'Monday 10:00 to 13:00'
-  - 'Wednesday 09:00 to 10:00'
-appointment_url: 'https://calendly.com'
+  street: Piazza Emanuele Filiberto 2
+  city: Turin
+  region: TO
+  postcode: '10122'
+  country: Italy
+  country_code: IT
+#coordinates:
+#  latitude: '37.4275'
+#  longitude: '-122.1697'
+#directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
+#office_hours:
+#  - 'Monday 10:00 to 13:00'
+#  - 'Wednesday 09:00 to 10:00'
+#appointment_url: 'https://calendly.com'
 contact_links:
   - icon: twitter
     icon_pack: fab
@@ -59,7 +59,7 @@ contact_links:
 
 main_menu:
   enable: true
-  align: c
+  align: r
   show_logo: true
   show_language: false
   show_day_night: false
