--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -23,6 +23,11 @@ main:
     url: '#contact'
     weight: 60
 
+main:
+  - name: contact
+    url: '#contact'
+    weight: 2
+
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
 #  - name: CV
