--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -25,7 +25,7 @@ main:
 
 main:
   - name: contact
-    url: '#contact'
+    url: 'contact/'
     weight: 2
 
 # Link to a PDF of your resume/CV from the menu.
