--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -59,8 +59,8 @@ contact_links:
 
 main_menu:
   enable: true
-  align: l
-  show_logo: true
+  align: r
+  show_logo: false
   show_language: false
   show_day_night: false
   show_search: true
@@ -104,7 +104,7 @@ copyright_license:
   allow_derivatives: false
   share_alike: true
   allow_commercial: false
-  notice: 'This work is licensed under {license}'
+  notice: 'This work is licensed under CC BY-NC-SA 4.0'
 abstract_length: 135
 plugins_js: []
 avatar:
